--- a/src/Club/Views/Settings/Index.cshtml
+++ b/src/Club/Views/Settings/Index.cshtml
@@ -4,67 +4,64 @@
 }
 
 
-<div>
-    <form method="post" asp-action="index" enctype="multipart/form-data">
-        <div asp-validation-sumnmary="ValidationSummary.ModelOnly"></div>
-        <div class="form-group">
-            <label for="theme">Tema</label>
-            <select name="theme" id="theme" class="form-control">
-                <option value="cerulean">Cerulean</option>
-                <option value="cosmo">Cosmo</option>
-                <option value="cyborg">Cyborg</option>
-                <option value="darkly">Darkly</option>
-                <option value="flatly">Flatly</option>
-                <option value="journal">Journal</option>
-                <option value="lumen">Lumen</option>
-                <option value="paper">Paper</option>
-                <option value="sandstone">Sandstone</option>
-                <option value="simplex">Simplex</option>
-                <option value="spacelab">Spacelab</option>
-                <option value="superhero">Superhero</option>
-            </select>
-        </div>
-        <div class="form-group">
-            <label for="htmlFooter">Footer</label>
-            <textarea name="htmlFooter" id="htmlFooter" class="form-control">@Model.HtmlFooter</textarea>
-        </div>
-        <button type="submit" class="btn btn-success">Guardar</button>
-    </form>
-    <br />
-    <br />
-    <form method="post" asp-action="carta" enctype="multipart/form-data">
-        <div asp-validation-sumnmary="ValidationSummary.ModelOnly"></div>
-        <div class="form-group">
-            <label for="carta">Carta de créditos</label>
-            <input type="file" class="form-control" name="carta" id="carta" />
-        </div>
-        <div class="row">
-            <div class="form-group col-md-1">
-                <button type="submit" class="btn btn-success">Cargar</button>
+<div class="row">
+    <div class="col-lg-12">
+        <form method="post" asp-action="index">
+            <div asp-validation-sumnmary="ValidationSummary.ModelOnly"></div>
+            <div class="form-group">
+                <label for="theme">Tema</label>
+                <select name="theme" id="theme" class="form-control">
+                    <option value="cerulean">Cerulean</option>
+                    <option value="cosmo">Cosmo</option>
+                    <option value="cyborg">Cyborg</option>
+                    <option value="darkly">Darkly</option>
+                    <option value="flatly">Flatly</option>
+                    <option value="journal">Journal</option>
+                    <option value="lumen">Lumen</option>
+                    <option value="paper">Paper</option>
+                    <option value="sandstone">Sandstone</option>
+                    <option value="simplex">Simplex</option>
+                    <option value="spacelab">Spacelab</option>
+                    <option value="superhero">Superhero</option>
+                </select>
             </div>
-            <div class="form-group col-md-1">
+            <div class="form-group">
+                <label for="htmlFooter">Footer</label>
+                <textarea name="htmlFooter" id="htmlFooter" class="form-control">@Model.HtmlFooter</textarea>
+            </div>
+            <button type="submit" class="btn btn-success">Guardar</button>
+        </form>
+    </div>
+</div>
+<br />
+<div class="row">
+    <div class="col-lg-5">
+        <form method="post" asp-action="carta" enctype="multipart/form-data">
+            <div asp-validation-sumnmary="ValidationSummary.ModelOnly"></div>
+            <div class="form-group">
+                <label for="carta">Carta de créditos</label>
+                <input type="file" class="form-control" name="carta" id="carta" />
+            </div>
+            <div class="btn-group" role="group" aria-label="...">
+                <button type="submit" class="btn btn-success">Cargar</button>
                 <a asp-action="carta" class="btn btn-default">Descargar</a>
             </div>
-        </div>
-    </form>
-    <br />
-    <br />
-    <form method="post" asp-action="header" enctype="multipart/form-data">
-        <div asp-validation-sumnmary="ValidationSummary.ModelOnly"></div>
-        <div class="form-group">
-            <label for="header">Imagen de encabezado</label>
-            <input type="file" class="form-control" name="header" id="header" />
-        </div>
-        <div class="row">
-            <div class="form-group col-md-1">
-                <button type="submit" class="btn btn-success">Cargar</button>
+        </form>
+    </div>
+    <div class="col-lg-5">
+        <form method="post" asp-action="header" enctype="multipart/form-data">
+            <div asp-validation-sumnmary="ValidationSummary.ModelOnly"></div>
+            <div class="form-group">
+                <label for="header">Imagen de encabezado (.png de 80px de altura y 250px ancho)</label>
+                <input type="file" class="form-control" name="header" id="header" />
             </div>
-            <div class="form-group col-md-1">
+            <div class="btn-group" role="group" aria-label="...">
+                <button type="submit" class="btn btn-success">Cargar</button>
                 <a asp-action="header" class="btn btn-default">Descargar</a>
             </div>
-        </div>
-    </form>
-    <br />
-    <br />
-    <a asp-action="export" class="btn btn-default btn-block">Exportar</a>
+        </form>
+    </div>
+    <div class="col-lg-2">
+        <a asp-action="export" class="btn btn-default btn-block">Exportar</a>
+    </div>
 </div>
