--- a/src/Club/Views/Users/Details.cshtml
+++ b/src/Club/Views/Users/Details.cshtml
@@ -116,7 +116,7 @@
                 </div>
                 @if (User.IsInRole("Admin"))
                 {
-                    <div id="notes">
+                    <div role="tabpanel" class="tab-pane"  id="notes">
                         <p>@Model.Notes</p>
                     </div>
                 }
