--- a/src/Club/Views/Settings/Export.cshtml
+++ b/src/Club/Views/Settings/Export.cshtml
@@ -1,14 +1,29 @@
 ﻿@model Club.ViewModels.SettingsViewModel
 
 @{
+    var uSure = (bool)(ViewBag.Delete ?? false);
+    var deleteMessage = uSure ? "¿Seguro?" : "Eliminar datos";
 }
 
 
 <div>
-    <form method="post" asp-action="ExportTermsInfo">
-        <button type="submit">Descargar info</button>
-    </form>
-    <form method="post" asp-action="ExportUsersInfo">
-        <button type="submit">Descargar usuarios</button>
-    </form>
+    <div class="col-lg-4">
+        <form method="post" asp-action="ExportTermsInfo">
+            <button class="btn btn-default btn-block" type="submit">Descargar info</button>
+        </form>
+    </div>
+    <div class="col-lg-4">
+        <form method="post" asp-action="ExportUsersInfo">
+            <button class="btn btn-default btn-block" type="submit">Descargar usuarios</button>
+        </form>
+    </div>
+    <div class="col-lg-4">
+        <form method="post" asp-action="DeleteAll">
+            <button class="btn btn-danger btn-block" type="submit">@deleteMessage</button>
+            @if (uSure)
+            {
+                <input type="hidden" name="trueDelete" value="true" />
+            }
+        </form>
+    </div>
 </div>
