--- a/src/Club/Views/Terms/Details.cshtml
+++ b/src/Club/Views/Terms/Details.cshtml
@@ -6,6 +6,6 @@
 
 <div class="row">
     <div class="col-md-12">
-        <h2>@Model.Name</h2>
+        <h1>Periodo @Model.Name <small>@Model.Start.ToShortDateString() - @Model.End.ToShortDateString()</small></h1>
     </div>
 </div>
