--- a/src/Club/Views/Dashboard/Index.cshtml
+++ b/src/Club/Views/Dashboard/Index.cshtml
@@ -9,65 +9,114 @@
     int month = DateTime.Now.Month;
 }
 
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#dashboard-menu" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
 
-<div class="row">
-    <div class="col-lg-4">
-        <div class="list-group">
             @if (term != null)
             {
-                <a href="#" class="list-group-item active">
-                    <h3 class="list-group-item-heading">Periodo: @term.Name</h3>
-                    <p class="list-group-item-text">@term.Start.ToShortDateString() - @term.End.ToShortDateString()</p>
-                </a>
-                <a asp-controller="events" asp-action="create" class="list-group-item">
-                    Nueva sesión <span class="badge"><i class="fa fa-calendar-plus-o"></i></span>
-                </a>
+                <a class="navbar-brand" href="#">@term.Name</a>
             }
             else
             {
-                <a asp-controller="terms" asp-action="create"
-                   class="list-group-item list-group-item-warning">
-                    <h3 class="list-group-item-heading">Registra un periodo</h3>
-                    <p class="list-group-item-text">
-                        Debes registrar un periodo para poder registrar sesiones
-                    </p>
+                <a class="navbar-brand" asp-controller="terms" asp-action="create">
+                    ¡Registra un periodo!
                 </a>
             }
-            <a href="~/events/attendance" class="list-group-item">
-                Asistencia
-            </a>
-            @*<a asp-controller="events" asp-action="attendance" class="list-group-item">
-                
-            </a>*@
-            <a asp-controller="announcements" asp-action="create" class="list-group-item">
-                Nuevo aviso <span class="badge"><i class="fa fa-bullhorn"></i></span>
-            </a>
-            <a asp-controller="problems" asp-action="create" class="list-group-item">
-                Nuevo problema <span class="badge"><i class="fa fa-gavel"></i></span>
-            </a>
-            <a asp-controller="submit" asp-action="index" class="list-group-item">
-                Revisar problemas <span class="badge">@Model.PendingSubmissionsCount</span>
-            </a>
-            <a asp-controller="topics" asp-action="create" class="list-group-item">
-                Nuevo tema <span class="badge"><i class="fa fa-tags"></i></span>
-            </a>
-            <a asp-controller="terms" asp-action="create" class="list-group-item">
-                Nuevo periodo <span class="badge"><i class="fa fa-tags"></i></span>
-            </a>
-            <a asp-action="index" asp-controller="users" class="list-group-item">
-                Ver usuarios
-            </a>
-            <a asp-action="unapproved" asp-controller="users" class="list-group-item">
-                <span class="badge">@Model.UsersAwaitingApprovalCount</span>
-                Usuarios pendientes de aprobación
-            </a>
-
-            <a asp-action="index" asp-controller="settings" class="list-group-item">
-                Configuración
-            </a>
         </div>
-    </div>
-    <div class="col-lg-8">
+        <div class="collapse navbar-collapse" id="dashboard-menu">
+            <ul class="nav navbar-nav">
+
+                @if (term != null)
+                {
+                    <li class="divider-vertical"></li>
+                    <li>
+                        <a asp-controller="events" asp-action="create">
+                            Nueva sesión
+                        </a>
+                    </li>
+                }
+                <li class="divider-vertical"></li>
+                <li>
+                    <a asp-controller="announcements" asp-action="create">
+                        Nuevo aviso
+                    </a>
+                </li>
+                <li class="divider-vertical"></li>
+                <li>
+                    <a asp-controller="problems">
+                        Problemas
+                        @if (Model.PendingSubmissionsCount != 0)
+                        {
+                            <span class="badge">@Model.PendingSubmissionsCount</span>
+                        }
+                    </a>
+                </li>
+                <li>
+                    <a data-toggle="dropdown" class="dropdown-toggle"><b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a asp-controller="topics" asp-action="create">Nuevo tema</a></li>
+                        <li><a asp-controller="problems" asp-action="create">Nuevo</a></li>
+                        <li><a asp-controller="submit" asp-action="index">Revisar problemas <span class="badge">@Model.PendingSubmissionsCount</span></a></li>
+                    </ul>
+                </li>
+                <li class="divider-vertical"></li>
+
+                <li>
+                    <a asp-controller="users">
+                        Usuarios
+                        @if (Model.UsersAwaitingApprovalCount != 0)
+                        {
+                            <span class="badge">@Model.UsersAwaitingApprovalCount</span>
+                        }
+                    </a>
+                </li>
+                <li>
+                    <a data-toggle="dropdown" class="dropdown-toggle"><b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="~/events/attendance">Asistencia</a></li>
+                        <li><a asp-action="unapproved" asp-controller="users">Pendientes de aprobación <span class="badge">@Model.UsersAwaitingApprovalCount</span></a></li>
+                    </ul>
+                </li>
+                <li class="divider-vertical"></li>
+
+                <li>
+                    <a asp-controller="terms">
+                        Periodos
+                    </a>
+                </li>
+                <li>
+                    <a data-toggle="dropdown" class="dropdown-toggle"><b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <a asp-controller="terms" asp-action="create">
+                                Nuevo periodo
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="divider-vertical"></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a asp-action="index" asp-controller="settings">
+                        Configuración
+                    </a>
+                </li>
+            </ul>
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+</nav>
+
+<div class="row">
+    <div class="col-lg-12">
         <div id="calendar" class="calendar">
         </div>
     </div>
