--- a/src/Club/Views/Shared/_Layout.cshtml
+++ b/src/Club/Views/Shared/_Layout.cshtml
@@ -48,6 +48,18 @@
             height: 80px;
             background-color: #f5f5f5;
         }
+
+        .navbar .divider-vertical {
+            height: 50px;
+            margin: 0 5px;
+            border-right: 1px solid rgba(0,0,0,.1);
+            border-left: 1px solid rgba(0,0,0,.1);
+        }
+
+        .navbar-inverse .divider-vertical {
+            border-right-color: rgba(0,0,0,.1);
+            border-left-color: rgba(0,0,0,.1);
+        }
     </style>
     @RenderSection("Styles", false)
     <title>@ViewBag.Title</title>
@@ -60,7 +72,7 @@
                 <div id="headerNav" class="container container-fluid">
                     <!-- Brand and toggle get grouped for better mobile display -->
                     <div class="navbar-header">
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#global-menu" aria-expanded="false">
                             <span class="sr-only">Toggle navigation</span>
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
@@ -70,7 +82,7 @@
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
-                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <div class="collapse navbar-collapse" id="global-menu">
                         <ul class="nav navbar-nav">
                             <li><a asp-controller="calendar" asp-action="index">Calendario</a></li>
                             <li><a asp-controller="announcements" asp-action="index">Avisos</a></li>
