--- a/src/Club/Views/Problems/Details.cshtml
+++ b/src/Club/Views/Problems/Details.cshtml
@@ -10,17 +10,16 @@
 <div class="row">
     <div class="col-md-12 ">
         <div class="jumbotron">
-            <h1>@Model.Name</h1>
-            <h3>@Model.Topic — @Model.Level</h3>
-            <input type="hidden" value="@Model.Difficulty" class="rating" data-start="0" data-stop="10" data-filled="fa fa-check-circle fa-2x" data-empty="fa fa-circle fa-2x" data-readonly />
-            <h4><a href="@Model.Link">@Model.Site</a></h4>
+            <h1>@Model.Name <small><a href="@Model.Link"><i class="fa fa-link" style="font-size: 30px;"></i>@Model.Site</a></small></h1>
+            <h3>@Model.Topic — @Model.Level — <span style="font-size: 15px;" ><input type="hidden" value="@Model.Difficulty" class="rating" data-start="0" data-stop="10" data-filled="fa fa-check-circle fa-2x" data-empty="fa fa-circle fa-2x" data-readonly /></span></h3>
             @if (User.Identity.IsAuthenticated)
             {
-                <h4><a asp-action="create" asp-controller="submit" asp-route-problemId="@Model.Id">Enviar solución</a></h4>
+                <a asp-action="create" asp-controller="submit" asp-route-problemId="@Model.Id" class="btn btn-primary"><i class="fa fa-paper-plane"></i>&nbsp;Enviar solución</a>
             }
             @if (User.IsInRole("Admin"))
             {
-                <h4><a asp-action="edit" asp-route-id="@Model.Id">Editar</a></h4>
+                <hr />
+                <h4><a asp-action="edit" asp-route-id="@Model.Id" class="btn btn-default">Editar</a></h4>
             }
         </div>
     </div>
