--- a/src/Club/Views/Terms/Create.cshtml
+++ b/src/Club/Views/Terms/Create.cshtml
@@ -25,13 +25,13 @@
         <div class="form-group col-md-6">
 
             <label asp-for="Start"></label>
-            <input asp-for="Start" class="form-control" value="@lastTermDate" />
+            <input asp-for="Start" class="form-control" value="@lastTermDate"  autocomplete="off" />
             <span asp-validation-for="Start"></span>
         </div>
 
         <div class="form-group col-md-6">
             <label asp-for="End"></label>
-            <input asp-for="End" class="form-control" />
+            <input asp-for="End" class="form-control" autocomplete="off" />
             <span asp-validation-for="End"></span>
         </div>
     </div>
