--- a/src/Club/Views/Account/PendingApproval.cshtml
+++ b/src/Club/Views/Account/PendingApproval.cshtml
@@ -27,10 +27,10 @@ else
 {
     <div class="jumbotron">
         <h1>Email pendiente de confirmación</h1>
-        <p>Hola @Model.Username, hemos enviado un correo electrónico a @email con un enlace de confirmación.</p>
+        <p>Hola @Model.Username, hemos enviado un correo electrónico a @email con un enlace de confirmación. <small>El correo a veces tarda en llegar y puede que termine en tu bandeja de correo no deseado, por favor, revisa ahí.</small></p>
         <form asp-action="resendconfirmationemail" method="post">
-            <input type="hidden" value="@Model.Username" />
-            <button class="btn btn-default" type="submit">Reenviar</button>
+            <input type="hidden" name="username" value="@Model.Username" />
+            <button class="btn btn-default" type="submit">Reenviar correo electrónico</button>
         </form>
     </div>
 
