--- a/src/Club/Views/Announcements/Create.cshtml
+++ b/src/Club/Views/Announcements/Create.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h2>@ViewBag.Title</h2>
-<form method="post" novalidate>
+<form method="post" enctype="multipart/form-data">
     <div asp-validation-sumnmary="ValidationSummary.ModelOnly"></div>
 
     <div class="row">
@@ -59,6 +59,22 @@
         </div>
     </div>
 
+
+    <div class="row">
+        <div class="form-group  col-md-2">
+            <label asp-for="IsCarousel"></label>
+            <input asp-for="IsCarousel" class="form-control" />
+        </div>
+        <div class="form-group  col-md-5">
+            <label asp-for="ImageUrl"></label>
+            <input type="file" class="form-control" name="announcementImage" id="announcementImage" />
+        </div>
+        <div class="form-group  col-md-5">
+            <label asp-for="RelatedUrl"></label>
+            <input asp-for="RelatedUrl" class="form-control" />
+        </div>
+    </div>
+
     <div class="form-group">
         <input type="submit" value="Crear" class="btn btn-success"/>
     </div>
@@ -68,7 +84,7 @@
     <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
     <script src="~/lib/moment/min/moment-with-locales.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.jsce"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js"></script>
     <script>
         $(function () {
             $('#DueDate').datetimepicker({
