--- a/src/Club/Views/Home/Index.cshtml
+++ b/src/Club/Views/Home/Index.cshtml
@@ -1,2 +1,70 @@
-﻿@{
+﻿@model List<Club.ViewModels.AnnouncementCarouselViewModel>
+
+@{
+
 }
+
+<div class="row">
+    <div class="col-lg-10 col-lg-push-1">
+
+        <div id="main-carousel" class="carousel slide" style="max-width:1000px; margin:0 auto;" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#main-carousel" data-slide-to="0" class="active"></li>
+                @for (var i = 1; i <= Model.Count; i++)
+                {
+                    <li data-target="#main-carousel" data-slide-to="@i"></li>
+                }
+            </ol>
+
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+                <div class="item active">
+                    <img src="/assets/a/99991231-default.png" alt="...">
+                    <div class="carousel-caption">
+                        <h1>El Club de Algoritmia</h1>
+                        <p class="lead">Bienvenido a El Club de Algoritmia de la Escuela Superior de Cómputo</p>
+                        <br />
+                    </div>
+                </div>
+
+                @foreach (var announcement in Model)
+                {
+                    <div class="item">
+                        <img src="@announcement.ImageUrl" alt="...">
+                        <div class="carousel-caption">
+                            <h1>@announcement.Name</h1>
+                            <p class="lead">@announcement.Text</p>
+                            @if(announcement.RelatedUrl != null)
+                            {
+                                <a href="@announcement.RelatedUrl" class="btn btn-default">Ver mas</a>
+                            }
+                            <br />
+                            <br />
+                        </div>
+                    </div>
+
+                }
+            </div>
+
+            <!-- Controls -->
+            <a class="left carousel-control" href="#main-carousel" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Anterior</span>
+            </a>
+            <a class="right carousel-control" href="#main-carousel" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Siguiente</span>
+            </a>
+        </div>
+
+    </div>
+</div>
+<style>
+    .carousel-caption .lead{
+        background-color: rgba(50, 50, 50, 0.7);
+    }
+    .carousel-caption h1,.carousel-caption h2, .carousel-caption h3{
+        background-color: rgba(50, 50, 50, 0.7);
+    }
+</style>
