--- a/src/Club/Views/Events/Delete.cshtml
+++ b/src/Club/Views/Events/Delete.cshtml
@@ -13,7 +13,39 @@
                 @Html.AntiForgeryToken()
 
                 <div class="form-actions no-color">
-                    <a class="btn btn-info" href="@Url.Action("detail", new {id = Model.Id})">Volver</a> <input type="submit" value="Eliminar" class="btn btn-warning" />
+                    <a class="btn btn-info" href="@Url.Action("detail", new {id = Model.Id})">Volver</a>
+                    @if (Model.HasSimilar)
+                    {
+
+                            <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+                            Eliminar
+                        </button>
+                            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                            <h4 class="modal-title" id="myModalLabel">Sesiones similares</h4>
+                                        </div>
+                                        <div class="modal-body">
+                                            Esta sesión está asociada con otras sesiones, ¿deseas eliminar solo esta, esta y los siguientes o todos en la serie?
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+                                            <button type="submit" value="all" name="editopt" class="btn btn-default">Todos</button>
+                                            <button type="submit" value="thisAndNext" name="editopt" class="btn btn-default">Este y los siguientes</button>
+                                            <button type="submit" value="justThis" name="editopt" class="btn btn-primary">Solo este</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                    }
+                    else
+                    {
+                        <button type="submit" value="justThis" name="editopt" class="btn btn-primary">Eliminar</button>
+
+                    }
                 </div>
             }
         </div>
