--- a/src/Club/Views/Account/SignUp.cshtml
+++ b/src/Club/Views/Account/SignUp.cshtml
@@ -23,8 +23,13 @@
     </div>
     <div class="form-group">
         @Html.LabelFor(i => i.Username)
-        <input class="form-control" asp-for="Username"/>
+        <input class="form-control" asp-for="Username" />
         <span class="text-muted" asp-validation-for="Username"></span>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(i => i.StudentId)
+        <input class="form-control" asp-for="StudentId" />
+        <span class="text-muted" asp-validation-for="StudentId"></span>
     </div>
     <div class="form-group">
         @Html.LabelFor(i => i.Email)
