Call to action & friendly password reset.

--- a/src/Club/Views/Account/ResetPassword.cshtml
+++ b/src/Club/Views/Account/ResetPassword.cshtml
@@ -1,26 +1,40 @@
 ﻿@model Club.ViewModels.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reestablecer contraseña";
+    var succeeded = (bool)ViewBag.Succeeded;
 }
 
 <h2>@ViewBag.Title</h2>
-<form method="post" asp-antiforgery="true">
-    <div class="form-group">
-        @Html.LabelFor(i => i.Password)
-        <input type="password" class="form-control" asp-for="Password" />
-        <span class="text-muted" asp-validation-for="Password"></span>
+@if (succeeded)
+{
+    <div class="jumbotron">
+        <h1>Password reestablecido</h1>
+        <p>Ya puedes iniciar sesión con tu nueva contraseña</p>
+        <p><a class="btn btn-primary btn-lg" asp-action="login" role="button">Iniciar sesión</a></p>
     </div>
-    <div class="form-group">
-        @Html.LabelFor(i => i.PasswordConfirmation)
-        <input type="password" class="form-control" asp-for="PasswordConfirmation" />
-        <span class="text-muted" asp-validation-for="PasswordConfirmation"></span>
-    </div>
-    <div class="form-group">
-        <input type="submit" class="btn btn-success" value="Reestablecer"/>
-        <input type="hidden" asp-for="UserId" />
-        <input type="hidden" asp-for="Code" />
-    </div>
-</form>
+}
+else
+{
+
+    <form method="post" asp-antiforgery="true">
+        <div class="form-group">
+            @Html.LabelFor(i => i.Password)
+            <input type="password" class="form-control" asp-for="Password" />
+            <span class="text-muted" asp-validation-for="Password"></span>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(i => i.PasswordConfirmation)
+            <input type="password" class="form-control" asp-for="PasswordConfirmation" />
+            <span class="text-muted" asp-validation-for="PasswordConfirmation"></span>
+        </div>
+        <div class="form-group">
+            <input type="submit" class="btn btn-success" value="Reestablecer" />
+            <input type="hidden" asp-for="UserId" />
+            <input type="hidden" asp-for="Code" />
+        </div>
+    </form>
+
+}
 
 @section Scripts {
     <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
