--- a/src/Club/Views/Submit/Create.cshtml
+++ b/src/Club/Views/Submit/Create.cshtml
@@ -17,8 +17,7 @@
     </div>
 }
 <form method="post" enctype="multipart/form-data">
-    <div asp-validation-sumnmary="ValidationSummary.ModelOnly"></div>
-
+    <div asp-validation-summary="ValidationSummary.ModelOnly"></div>
     <div class="row">
         <div class="form-group col-md-12">
             <label asp-for="GistUrl"></label>
