--- a/src/Club/Views/Users/Details.cshtml
+++ b/src/Club/Views/Users/Details.cshtml
@@ -3,128 +3,132 @@
     ViewBag.Title = Model.Username;
 }
 
-<div>
-    <div>
-        <div class="row">
-            <div class="col-lg-12">
-                <h2>@Model.Username <small>@Model.FirstName @Model.LastName</small></h2>
-                <input type="hidden" id="id" value="@Model.Username" />
+<div class="row">
+    <div class="col-lg-12">
+        <h2>@Model.Username <small>@Model.FirstName @Model.LastName</small></h2>
+        <input type="hidden" id="id" value="@Model.Username" />
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-lg-5">
+        <p class="lead">Nivel: @Model.Level</p>
+    </div>
+    @if (User.Identity.IsAuthenticated)
+    {
+        <div class="col-lg-2 col-lg-offset-5">
+            <div class="btn-group hidden-print">
+                <button type="button" class="btn btn-info dropdown-toggle btn-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <i class="fa fa-cogs fa-fw"></i> Opciones <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu">
+                    @if (User.Identity.Name.Equals(Model.Username) || User.IsInRole("Admin"))
+                    {
+                        <li>
+                            <a asp-action="edit" asp-route-username="@Model.Username">Editar perfil</a>
+                        </li>
+                    }
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <li role="separator" class="divider"></li>
+                        <li>
+                            <a asp-route-id="@Model.Username" asp-action="Letter">Descargar carta</a>
+                        </li>
+                    }
+                </ul>
             </div>
         </div>
+    }
+</div>
 
-        <div class="row">
-            <div class="col-lg-5">
-
-                <p class="lead">@Model.Level</p>
-            </div>
-            @if (User.Identity.IsAuthenticated)
-            {
-                <div class="col-lg-2 col-lg-offset-5">
-                    <div class="btn-group hidden-print">
-                        <button type="button" class="btn btn-info dropdown-toggle btn-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <i class="fa fa-cogs fa-fw"></i> Opciones <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu">
-                            @if (User.Identity.Name.Equals(Model.Username) || User.IsInRole("Admin"))
-                            {
-                                <li>
-                                    <a asp-action="edit" asp-route-username="@Model.Username">Editar perfil</a>
-                                </li>
-                            }
-                            @if (User.IsInRole("Admin"))
-                            {
-                                <li role="separator" class="divider"></li>
-                                <li>
-                                    <a asp-route-id="@Model.Username" asp-action="Letter">Descargar carta</a>
-                                </li>
-                            }
-                        </ul>
-                    </div>
+<div ng-app="app-attended-events" class="row">
+    @if (User.IsInRole("Admin"))
+    {
+        <div class="col-md-12">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Notas</h3>
                 </div>
-            }
+                <div class="panel-body">
+                    <pre>@Model.Notes</pre>
+                </div>
+            </div>
         </div>
+    }
 
-        <div>
-
-            <!-- Nav tabs -->
-            <ul class="nav nav-tabs" role="tablist">
-                <li role="presentation" class="active"><a href="#events" aria-controls="home" role="tab" data-toggle="tab">Asistencias</a></li>
-                <li role="presentation"><a href="#problems" aria-controls="profile" role="tab" data-toggle="tab">Problemas resueltos</a></li>
-                @if (User.IsInRole("Admin"))
-                {
-                    <li role="presentation"><a href="#notes" aria-controls="notes" role="tab" data-toggle="tab">Notas</a></li>
-                }
-            </ul>
-
-            <!-- Tab panes -->
-            <div ng-app="app-attended-events" class="tab-content">
-                <div ng-controller="attendedEventsController as vm" role="tabpanel" class="tab-pane active" id="events">
-                    <table class="table table-responsive">
-                        <thead>
-                            <tr>
-                                <th>Sesión</th>
-                                <th>Ubicación</th>
-                                <th>Fecha</th>
-                                <th>Duración</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr ng-repeat="user in vm.queriedUsers">
-                                <td>{{ user.name }}</td>
-                                <td>{{ user.location }}</td>
-                                <td>{{ user.start | date:'medium' }}</td>
-                                <td>{{ user.duration }}</td>
-                            </tr>
-                        </tbody>
-                        <tfoot>
-                            <tr>
-                                <td colspan="3">
-                                    <div class="btn-group" role="group" aria-label="...">
-                                        <button ng-click="vm.previousPage();" class="btn btn-default" aria-label="Previous">
-                                            <span aria-hidden="true">&laquo;</span>
-                                        </button>
-                                        <button type="button" class="btn btn-default">
-                                            {{ vm.currentPage }} / {{ vm.totalPages }}
-                                        </button>
-                                        <button ng-click="vm.nextPage();" class="btn btn-default" aria-label="Next">
-                                            <span aria-hidden="true">&raquo;</span>
-                                        </button>
-                                    </div>
-
-                                </td>
-                            </tr>
-                        </tfoot>
-                    </table>
-                </div>
-                <div ng-controller="submissionsController as tt" role="tabpanel" class="tab-pane" id="problems">
-                    <table class="table table-responsive">
-                        <thead>
-                            <tr>
-                                <th>Problema</th>
-                                <th>Estatus</th>
-                                <th>Fecha</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr ng-repeat="sumbission in tt.queriedSubmissions">
-                                <td>{{ sumbission.problemName }}</td>
-                                <td>{{ submission.accepted }}</td>
-                                <td>{{ sumbission.lastAttemptDate | date:'medium' }}</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                @if (User.IsInRole("Admin"))
-                {
-                    <div role="tabpanel" class="tab-pane"  id="notes">
-                        <p>@Model.Notes</p>
-                    </div>
-                }
+    <div ng-controller="attendedEventsController as vm" class="col-md-6" id="events">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">Asistencias</h3>
             </div>
-
+            <div class="panel-body">
+                <table class="table table-responsive">
+                    <thead>
+                        <tr>
+                            <th>Sesión</th>
+                            <th>Ubicación</th>
+                            <th>Fecha</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="user in vm.queriedUsers">
+                            <td>{{ user.name }}</td>
+                            <td>{{ user.location }}</td>
+                            <td>{{ user.start | date:'medium' }}</td>
+                        </tr>
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <td colspan="3">
+                                <div class="btn-group" role="group" aria-label="...">
+                                    <button ng-click="vm.previousPage();" class="btn btn-default" aria-label="Previous">
+                                        <span aria-hidden="true">&laquo;</span>
+                                    </button>
+                                    <button type="button" class="btn btn-default">
+                                        {{ vm.currentPage }} / {{ vm.totalPages }}
+                                    </button>
+                                    <button ng-click="vm.nextPage();" class="btn btn-default" aria-label="Next">
+                                        <span aria-hidden="true">&raquo;</span>
+                                    </button>
+                                </div>
+                            </td>
+                        </tr>
+                    </tfoot>
+                </table>
+            </div>
+        </div>
+    </div>
+    <div ng-controller="submissionsController as tt" class="col-md-6" id="problems">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">Problemas intentados</h3>
+            </div>
+            <div class="panel-body">
+                <table class="table table-responsive">
+                    <thead>
+                        <tr>
+                            <th>Problema</th>
+                            <th>Fecha</th>
+                            <th>Estatus</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="submission in tt.queriedSubmissions" class="{{ submission.accepted === null ? 'info' : (submission.accepted ? 'success' : 'danger')}}">
+                            <td>{{ submission.problemName }}</td>
+                            <td>{{ submission.lastAttemptDate | date:'medium' }}</td>
+                            <td>
+                                <a href="/submission/{{submission.problemId}}/{{submission.user}}">
+                                    {{ submission.accepted === null ? 'Pendiente' : (submission.accepted ? 'Aceptado' : 'Rechazado')}}
+                                </a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
+
 @section Scripts{
     <script src="~/lib/angular/angular.min.js"></script>
 
